# azure-django-demo

./: .gitignore  docker-compose.yml
backend/: pyproject.toml
backend/authn/: authentication.py  jwks.py  models.py  views.py
backend/authn/migrations/: 0001_initial.py
backend/backend/: settings.py  urls.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/auth/: oidc.ts
frontend/src/pages/: AuthCallback.tsx
